artifacts/k8s-example-yaml/enroute.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: enroute
  name: enroute
  namespace: enroute-gw-k8s
spec:
  selector:
    matchLabels:
      app: enroute
  replicas: 1
  template:
    metadata:
      labels:
        app: enroute
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8002"
        prometheus.io/path: "/stats/prometheus"
    spec:
      containers:
      - image: saarasio/enroute-gw:latest
        imagePullPolicy: Always
        name: enroute
        command: ["/bin/enroute"]
        args: ["serve", "--incluster", "--envoy-service-http-port", "8080", "--envoy-service-https-port", "8443", "--mode-ingress", "--enable-ratelimit"]
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
      - image: redis
        imagePullPolicy: Always
        name: redis
        command: ["redis-server"]
        args: ["--port", "6379", "--loglevel", "verbose"]
      - image: docker.io/envoyproxy/envoy:v1.11.0
        name: envoy
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        command: ["envoy"]
        args:
        - --config-path /config/contour.json
        - --service-cluster $(ENROUTE_NAMESPACE)
        - --service-node $(ENVOY_POD_NAME)
        - --log-level trace
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8002
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - name: enroute-config
          mountPath: /config
        lifecycle:
          preStop:
            exec:
              command: ["wget", "-qO-", "--post-data=''", "http://localhost:9001/healthcheck/fail"]
      volumes:
      - name: enroute-config
        emptyDir: {}
      dnsPolicy: ClusterFirst
      serviceAccountName: enroute
      terminationGracePeriodSeconds: 30
      # The affinity stanza below tells Kubernetes to try hard not to place 2 of
      # these pods on the same node.
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: enroute
              topologyKey: kubernetes.io/hostname
---
