artifacts/k8s-example-yaml/kuard.works5.httpfilter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kuard
  name: kuard
  namespace: enroute-gw-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        name: kuard
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kuard
  name: kuard
  namespace: enroute-gw-k8s
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuard
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: enroute.saaras.io/v1beta1
kind: IngressRoute
metadata:
  labels:
    app: kuard
  name: kuard
  namespace: enroute-gw-k8s
spec:
  virtualhost:
    fqdn: kuard.local
    tls:
      secretName: tls-secret-v0.3.0-kuard-local
    filters:
      - name: luatestfilter
        type: http_filter_lua
  routes:
    - match: /
      services:
        - name: kuard
          port: 80
      filters:
        - name: rl2
          type: route_filter_ratelimit
---
